# VHDL-DLX-Processor-ECE6740-USU

./: .gitignore
DE10_CD/: Verify.md5  Verify.sfv
DE10_Resources/: DE10_LITE.qsf
DLX_Assembler/: .clang-format  CMakeLists.txt  DlxAssembler.cpp  DlxData.hpp  DlxInstruction.hpp  DlxParser.cpp  DlxParser.hpp  Lookup.hpp  ParseHelpers.cpp  ParseHelpers.hpp
DLX_Assembler/assembly/: collatz.dlx  data2.mif  data3.mif  data_factorial.mif  factorial.dlx  factorial_ins.mif  factorial_instruct.mif  hazard_data.mif  hazard_instruct.mif  hazards.dlx  instruct.mif  instruct2.mif  instruct3.mif  lcm.dlx  nop_ex1.dlx  nop_factorial.dlx  prime.dlx  print_factorial.dlx  square.dlx  testing.dlx
DLX_Print/: DLX.vhd  DLX_TOP.asm.rpt  DLX_TOP.cdf  DLX_TOP.done  DLX_TOP.eda.rpt  DLX_TOP.fit.rpt  DLX_TOP.fit.summary  DLX_TOP.flow.rpt  DLX_TOP.ipregen.rpt  DLX_TOP.jdi  DLX_TOP.map.rpt  DLX_TOP.map.summary  DLX_TOP.merge.rpt  DLX_TOP.merge.summary  DLX_TOP.pof  DLX_TOP.qpf  DLX_TOP.qsf  DLX_TOP.sof  DLX_TOP.sta.rpt  DLX_TOP.sta.summary  DLX_TOP.vhd  DLX_TOP_assignment_defaults.qdf  DLX_TOP_nativelink_simulation.rpt  DataMemory.vhd  DlxDecode.vhd  DlxExecute.vhd  Factorial_TB.vhd  ForwardController.vhd  InstructionMemory.vhd  PrintFIFO.vhd  PrintFIFO_inst.vhd  PrintHandler.vhd  UART_FIFO.cmp  UART_FIFO.vhd  UartPll.vhd  UartPll_inst.vhd  dlx_constants.vhd  stp1.stp
Decode/: DLX.asm.rpt  DLX.done  DLX.eda.rpt  DLX.fit.rpt  DLX.fit.summary  DLX.flow.rpt  DLX.htm  DLX.jdi  DLX.map.rpt  DLX.map.summary  DLX.pin  DLX.pof  DLX.qpf  DLX.qsf  DLX.qws  DLX.sof  DLX.sta.rpt  DLX.sta.summary  (+9 more)
(+3617 files in other folders)
